--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
 </head>
 <body>
     <main class="conteudo">
-        <h1 class="titulo">Curso de auto-maquiagem</h1>
-        <h2 class="subtitulo">Saia do basico</h2>
+        <h1 class="titulo">CURSO DE AUTO-MAQUIAGEM</h1>
+        <h2 class="subtitulo">saia do básico</h2>
+        <hr class="linha">
+        <p class="texto">O curso de auto maquiagem ensina técnicas essenciais para realçar sua beleza natural.
+             Aprenda a preparar a pele, escolher produtos adequados e aplicar maquiagem de forma prática e eficiente. 
+             Ideal para quem deseja ganhar confiança e autonomia na hora de se maquiar. 
+
+        </p>
+        <hr class="linha">
+        <video poster="imagens/foto2.jpg" class="meu-video" autoplay loop muted>
+            <source src="videos/tutorial2.mp4" type="video/mp4">
+        </video>
+
+            <a href="comprar.html" class="botao-comprar">COMPRAR</a>
+            <audio id="som">
+                <source src="audio/musica-fundo.mp3" type="audio/mp3">
+            </audio>
     </main>
     <script src="app.js"></script>
 
