--- a/comprar.html
+++ b/comprar.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <main>
+    <main class="conteudo">
         <h1 class="titulo">CURSO DE AUTO-MAQUIAGEM</h1>
         <h2 class="subtitulo"> finalizar compra</h2>
-    </main>
+    
     <form class="formulario">
-        <label>Nome </label>
+        <label class="for">Nome </label>
         <input type="text" placeholder="digite seu nome" class="campo">
-        <label>E-mail</label>
+        <label class="for">E-mail</label>
         <input type="email" class="campo">
-        <label>Idade</label>
+        <label class="for">Idade</label>
         <input type="number" class="campo">
-        <label>Telefone</label>
+        <label class="for">Telefone</label>
         <input type="tel" class="campo">
-        <label>Modo de pagamento</label>
+        <label class="for">Formas de pagamento</label>
         <select class="campo">
             <option>PIX</option>
             <option>Dinheiro</option>
@@ -28,5 +28,6 @@
         </select>
         <button class="botao-comprar"> PAGAR</button>
     </form>
+    </main>
 </body>
 </html>
