--- a/comprar.html
+++ b/comprar.html
@@ -21,12 +21,14 @@
         <label class="for">Telefone</label>
         <input type="tel" class="campo">
         <label class="for">Formas de pagamento</label>
+
         <select class="campo">
             <option>PIX</option>
             <option>Dinheiro</option>
             <option>Cartão</option>
         </select>
-        <button class="botao-comprar"> PAGAR</button>
+
+        <button class="botao-pagar"> PAGAR</button>
     </form>
     </main>
 </body>
