--- a/comprar.html
+++ b/comprar.html
@@ -6,10 +6,12 @@
     <title>Comprar o curso </title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body class="fundo">
     <main class="conteudo">
         <h1 class="titulo">CURSO DE AUTO-MAQUIAGEM</h1>
         <h2 class="subtitulo"> finalizar compra</h2>
+
+        
     
     <form class="formulario">
         <label class="for">Nome </label>
@@ -22,7 +24,7 @@
         <input type="tel" class="campo">
         <label class="for">Formas de pagamento</label>
 
-        <select class="campo">
+        <select class="formas-pagamento">
             <option>PIX</option>
             <option>Dinheiro</option>
             <option>Cartão</option>
